# Memcached-UHM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
memcached/: Makefile.am  assoc.c  configure.ac  memcached.c  memcached.h
uhm/: Allocator.cuh  Batch.cuh  BatchProducer.cuh  BatchProvider.cuh  CMakeLists.txt  GPUHMBase.cuh  GPUKVServe.cuh  StdUHM.h  UHM.cuh  basetypes.cuh  doxfile.txt  hash.cuh  memcimpl.cu  optional.hh  simplImpl.cu
uhm/tests/: AllocatorTest.cu  CMakeLists.txt  HashMapTest.cu  StdImplTest.cc  TestMacros.cuh
